--- a/packages/tokens/package.json
+++ b/packages/tokens/package.json
@@ -2,14 +2,17 @@
   "name": "@ignite-marceometry/tokens",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsup src/index.ts --format esm,cjs --dts",
     "dev": "tsup src/index.ts --format esm,cjs --dts --watch"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
+    "@ignite-marceometry/ts-config": "*",
     "tsup": "^7.2.0",
     "typescript": "^5.1.6"
   }
