--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -1,4 +1,8 @@
 {
   "extends": "@ignite-marceometry/ts-config/react.json",
-  "include": ["src"]
+  "include": ["src"],
+  "compilerOptions": {
+    "baseUrl": "src",
+    "paths": { "@/*": ["*"] }
+  }
 }
