--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -33,6 +33,7 @@
     "@ignite-ui/react": "^1.0.0",
     "@ignite-ui/tokens": "^1.0.0",
     "@ignite-ui/ts-config": "^1.0.0",
+    "phosphor-react": "^1.4.1",
     "polished": "^4.2.2"
   }
 }
