--- a/packages/tokens/package.json
+++ b/packages/tokens/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ignite-ui/tokens",
+  "name": "@marceometry-ignite-ui/tokens",
   "version": "1.0.0",
   "description": "",
   "main": "./dist/index.js",
@@ -13,8 +13,8 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@ignite-ui/ts-config": "*",
-    "@ignite-ui/eslint-config": "*",
+    "@marceometry-ignite-ui/ts-config": "*",
+    "@marceometry-ignite-ui/eslint-config": "*",
     "tsup": "^7.2.0",
     "typescript": "^5.1.6"
   }
